# MegaStringComparingToolKit

./: .gitignore  GUI__isd_str_sdk.spec  README.md  builder__GUI.bat  builder__whl.bat  builder__whl.ps1  pyproject.toml  requirements.txt
build_tests/: test_result_helper_merge.py
docs/: all_cleaning_list.md  all_matching_list.md
gui/: GUI__isd_str_sdk.py  _shared.py  _tab_cleaning.py  _tab_matching.py  _tab_result_helper.py  _tab_tdd.py  testing_app.py
legacy/: __init__.py
legacy/EntireCompareTree/: _tmp_configs.py  contexts.py  core.py  draw.py  executor.py  iterator_framework.py  main_wos_refilling_scopus_step1.py  nodes.py  stras.py
legacy/EntireCompareTree/base/: ComparisonEngine.py  ConfigBase.py  GUITreeTraversalApp.py  example_configs.py
legacy/EntireCompareTree/py_tests/: run_strategy_tests.py  test_abbrev_clean.py
legacy/EntireCompareTree/test/: debug_neg.py  in_variant_matcher.py  run_example.py  test_in_variant_matcher.py  test_in_variant_matcher_extended.py
legacy/EntireCompareTree/worker/: worker_strategy.py
legacy/PRISTree/: PRISTreeNodeStrategies.py
legacy/data_structure/: MatchingTree.py  battered___BaseTreeNode.py
legacy/processors_strategies/: helper.py  utils.py
legacy/processors_strategies/TESTs/: compare_strategy_test__1.py  integration_test__3.py  picker_test__2.py
legacy/processors_strategies/compare_module/: str_processors.py
legacy/processors_strategies/py_tests/: StrFunc_ExcelACTable_.py  run_strategy_tests.py  test_StrFunc_KeepEnglishParenthesesAndSpaces.py
src/isd_str_compare/: cli.py
src/isd_str_compare/legacy/EntireCompareTree/: ab.py  core.py  draw.py  main.py  main_wos_refilling_scopus_step1.py  new__main_wos_refilling_scopus_step1.py  nodes.py  stras.py  testable_configs.py  tree_in_main.py
src/isd_str_compare/legacy/PRISTree/: PRISTreeGUIDrawer.py  PRISTreeNodeBase.py  PRISTreeNodeStrategies.py  PRISTreeTraversal.py
src/isd_str_sdk/: __init__.py  cleaning_tools_.py  cli.py  matching_tools_.py
src/isd_str_sdk/TDD/: run_strategy_tests.py
src/isd_str_sdk/base/: AbstractNode.py  AbstractStrategy.py  IComparisonContext.py  IStrProcessor.py  IStrProcessorContext.py  StrProcessorChain.py  _decorators.py
src/isd_str_sdk/cleaning_strategies/: StrProcessorWiths.py  base_str_processors.py  param_str_processors.py
src/isd_str_sdk/cleaning_strategies/pre_contexted/: contexted_str_processors.py
src/isd_str_sdk/cleaning_strategies/undone/: undone_str_processors.py
src/isd_str_sdk/core/: StrProcessorWiths.py  StrProcessorsChain.py  __init__.py  contexts.py
src/isd_str_sdk/core/strategies/: _tmp.py  base_str_processors.py  contexted_str_processors.py  param_str_processors.py  undone_str_processors.py
src/isd_str_sdk/matching_tools/strategies/: fuzzy_matching.py  hybrid_matching.py  (+2 more)
src/isd_str_sdk/str_cleaning/: __init__.py  _tmp.py
src/isd_str_sdk/str_matching/: __init__.py  adapters.py
src/isd_str_sdk/utils/: adapters.py  decorators.py  exceptions.py
tests/: test_cleaning.py  test_matching.py
(+37 files in other folders)
