[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "isd-str-sdk"
dynamic = ["version"]
description = "ISD String Comparing Toolkit (Python)"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "周暘恩", email = "chouyangen0401@ntu.edu.tw" },
    { name = "Anthony Chou", email = "mi.anthony.chou@gmail.com" },
]
dependencies = [
    "python-dotenv>=1.0.0",
    "rapidfuzz>=3.0",
    "regex>=2023.0",
    "pandas>=2.0",
    "isd-py-framework-sdk @ https://github.com/ChouYangEn0401/ISDPythonFrameworkSDK/releases/download/v0.4.5/isd_py_framework_sdk-0.4.5-py3-none-any.whl#sha256=b35455425080f77c2f277a0393f3c3120e4ad037fab0a05ba39949d4952aec2c",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "isd_str_sdk._version.__version__" }

[project.optional-dependencies]
# 安裝方式 pip install {project_name}[dev]
dev = [
    "pytest>=7.0",
    "black>=24.0",
]
nlp = [
    # Optional dependency for `EmbeddingSimilarityStrategy`
    "sentence-transformers>=2.2.2"
]

# [project.scripts]
# Uncomment and fill in after renaming the package:
# my_tool = "my_package.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
